# quizpal

./: .env_sample  README.md  bot.py  constants.py  helpers.py  models.py  prompt_engineering.py  pyproject.toml
.github/workflows/: astro.yml  deploy_vps.yml
assets/: sample_json.json
astro/: README.md  astro.config.mjs
astro/src/: config.yaml  navigation.js  types.d.ts
astro/src/components/widgets/: Features3.astro  Footer.astro
astro/src/content/: config.ts
astro/src/content/post/: Enhancing Knowledge Retention with AI-Generated Quizzes.md  Enhancing Student Engagement through AI-Driven Quizzes.md  Improving Learning Outcomes with AI-Enhanced Quizzes.md  front.matter
astro/src/layouts/: PageLayout.astro
astro/src/pages/: index.astro  privacy.md  rss.xml.ts  terms.md
astro/src/pages/[...blog]/: [...page].astro
astro/src/utils/: blog.ts  directories.ts  frontmatter.mjs  images-optimization.ts  images.ts  permalinks.ts  utils.ts
databases/: here_lies_bot.db
src/: admin_alerts.py  bot.py  constants.py  decorators.py  helpers.py  markdown_escaper.py  models.py  prompt_engineering.py  quiz.html  tests.py  video_gen.py
src/migrations/: 001_initial.py  002_add_total_money_spent.py  003_remove_multiplier.py  004_testing_auto_migrate.py  005_remove_useless_field.py  006_754da875575c40f88ed5ba4a05e1f3a7.py  007_8566433e4d0f4077a726eb7a805c4ba1.py  008_bc062eaad8544956add1803220a0c78d.py
src/video_gen/: video_gen.py
